# kanji_dict_bot

./: .env.example  LICENSE  README.md  pyproject.toml
kanji_dict_bot/: anki_deck_reader.py  messages.py  telegram_bot.py
